# CrewAI-Reddit-Newsletter-app

./: README.md  pyproject.toml
src/redditscraper/: crew.py  main.py
src/redditscraper/config/: agents.yaml  tasks.yaml
src/redditscraper/tools/: custom_tool.py
