[project]
name = "redditscraper"
version = "0.1.0"
description = "RedditScraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
redditscraper = "redditscraper.main:run"
run_crew = "redditscraper.main:run"
train = "redditscraper.main:train"
replay = "redditscraper.main:replay"
test = "redditscraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
